fixed overflow on right panel

--- a/styles.scss
+++ b/styles.scss
@@ -45,6 +45,7 @@ body, html {
             background-color: lightblue;
             width: 40%;
             padding-top: 1.5em;
+            overflow-y: auto;
 
             ul {
                 list-style: none;
